# MotionStage

./: .gitignore  Cargo.toml  README.md  motionstage-blender
.github/workflows/: rust.yml
crates/cinemotion/: Cargo.toml
crates/cinemotion-cli/: Cargo.toml
crates/cinemotion-cli/src/: main.rs  simulate.rs
crates/cinemotion-core/: Cargo.toml
crates/cinemotion-core/src/: attributes.rs  device_test.rs  devices.rs  engine.rs  engine_test.rs  error.rs  globals.rs  lib.rs  name.rs  prelude.rs  protocol_ext.rs  runtime.rs  scene.rs  scene_test.rs  session.rs  session_test.rs  state.rs  world.rs
crates/cinemotion-discovery/: Cargo.toml
crates/cinemotion-discovery/src/: lib.rs
crates/cinemotion-export-chan/: Cargo.toml
crates/cinemotion-export-chan/src/: lib.rs
crates/cinemotion-export-usd/: Cargo.toml
crates/cinemotion-export-usd/src/: lib.rs
crates/cinemotion-media/: Cargo.toml
crates/cinemotion-media/src/: lib.rs
crates/cinemotion-proto/: Cargo.toml  build.rs
crates/cinemotion-proto/src/: lib.rs
crates/cinemotion-proto/src/defs/: cinemotion.proto
crates/cinemotion-protocol/: Cargo.toml
crates/cinemotion-recording/: Cargo.toml
crates/cinemotion-recording/src/: lib.rs
crates/cinemotion-sdk-python/: Cargo.toml
crates/cinemotion-sdk-python/src/: lib.rs
crates/cinemotion-server/: Cargo.toml
crates/cinemotion-server/src/: lib.rs
crates/cinemotion-testkit/: Cargo.toml
crates/cinemotion-testkit/src/: lib.rs
crates/cinemotion-transport-quic/: Cargo.toml
crates/cinemotion-transport-quic/src/: lib.rs
crates/cinemotion-webrtc/: Cargo.toml
crates/cinemotion-webrtc/src/: lib.rs
crates/cinemotion/src/: actor.rs  backend.rs  backend_test.rs  cinemotion.rs  engine.rs  engine_test.rs  error.rs  lib.rs  server.rs  session.rs  websocket.rs
crates/cinemotion/src/cli/: cinemotion.rs  debugger.rs  jsondoc.rs  server.rs
crates/cinemotion/src/cli/debugger/: app.rs  log_view.rs  mod.rs  scene_tree.rs  terminal.rs
crates/cinemotion/src/client/: client.rs  coordinator.rs  mod.rs  mod_test.rs
crates/cinemotion/src/protocol/: mod.rs
crates/motionstage-cli/: Cargo.toml
crates/motionstage-cli/src/: main.rs  simulate.rs
crates/motionstage-core/: Cargo.toml
crates/motionstage-core/src/: lib.rs  model.rs  runtime.rs
crates/motionstage-discovery/: Cargo.toml
crates/motionstage-discovery/src/: lib.rs
crates/motionstage-export-chan/: Cargo.toml
crates/motionstage-export-chan/src/: lib.rs
crates/motionstage-export-usd/: Cargo.toml
crates/motionstage-export-usd/src/: lib.rs
crates/motionstage-media/: Cargo.toml
crates/motionstage-media/src/: lib.rs
crates/motionstage-protocol/: Cargo.toml
crates/motionstage-protocol/src/: lib.rs
crates/motionstage-recording/: Cargo.toml
crates/motionstage-recording/src/: lib.rs
crates/motionstage-sdk-python/: Cargo.toml
crates/motionstage-sdk-python/src/: lib.rs
crates/motionstage-sdk-swift/: Cargo.toml
crates/motionstage-sdk-swift/include/: module.modulemap  motionstage_swift.h
crates/motionstage-sdk-swift/src/: lib.rs
crates/motionstage-server/: Cargo.toml
crates/motionstage-server/src/: lib.rs
crates/motionstage-testkit/: Cargo.toml
crates/motionstage-testkit/src/: lib.rs
crates/motionstage-transport-quic/: Cargo.toml
crates/motionstage-transport-quic/src/: lib.rs
crates/motionstage-webrtc/: Cargo.toml
crates/motionstage-webrtc/src/: lib.rs
docs/: concepts-workflow.md  dcc-integrators.md  design-architecture.md  device-integrators.md  hardening.md  ios-integrators.md  protocol.md  tasks.md
legacy/: crates_ds_store
legacy/cinemotion_derive_old/: Cargo.toml
legacy/cinemotion_old/: Cargo.toml
legacy/cinemotion_old/src/: client.rs  lib.rs  net.rs  server.rs
legacy/cinemotion_old/src/actors/: mod.rs
legacy/cinemotion_old/src/cli/: main.rs  server.rs
legacy/motionstage_derive_old/: Cargo.toml
legacy/motionstage_derive_old/src/: lib.rs
legacy/motionstage_old/: Cargo.toml
legacy/motionstage_old/src/: engine.rs  prelude.rs  rt.rs  runtime.rs  runtime_test.rs
legacy/motionstage_old/src/cli/: main.rs  server.rs
python/: pyproject.toml
python/blender_adapter/: __init__.py  cinemotion_blender_adapter.py  motionstage_blender_adapter.py
python/cinemotion_sdk/: __init__.py  delegates.py  server.py  video.py
python/cinemotion_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/motionstage_sdk/: __init__.py  server.py
python/motionstage_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_blender_adapter.py  test_server.py  test_video.py
scripts/: build-swift-ios.sh
swift/MotionStageClient/: Package.swift  README.md
swift/MotionStageClient/Sources/MotionStageClient/: MotionStageClient.swift
swift/MotionStageClient/Tests/MotionStageClientTests/: MotionStageClientTests.swift
