[workspace]
members = [
  "crates/cinemotion-protocol",
  "crates/cinemotion-core",
  "crates/cinemotion-server",
  "crates/cinemotion-transport-quic",
  "crates/cinemotion-webrtc",
  "crates/cinemotion-discovery",
  "crates/cinemotion-media",
  "crates/cinemotion-recording",
  "crates/cinemotion-export-usd",
  "crates/cinemotion-export-chan",
  "crates/cinemotion-sdk-python",
  "crates/cinemotion-cli",
  "crates/cinemotion-testkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10"
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
bevy_ecs = "0.17"
bincode = "1.3"
futures = "0.3"
async-trait = "0.1"
indexmap = { version = "2.7", features = ["serde"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.10"
rcgen = "0.13"
mdns-sd = "0.13"
pyo3 = { version = "0.22", features = ["abi3-py310"] }
webrtc = "0.11"
cinemotion-protocol = { path = "crates/cinemotion-protocol" }
cinemotion-core = { path = "crates/cinemotion-core" }
cinemotion-server = { path = "crates/cinemotion-server" }
cinemotion-discovery = { path = "crates/cinemotion-discovery" }
cinemotion-media = { path = "crates/cinemotion-media" }
cinemotion-recording = { path = "crates/cinemotion-recording" }
cinemotion-export-usd = { path = "crates/cinemotion-export-usd" }
cinemotion-export-chan = { path = "crates/cinemotion-export-chan" }
cinemotion-sdk-python = { path = "crates/cinemotion-sdk-python" }
cinemotion-testkit = { path = "crates/cinemotion-testkit" }
cinemotion-transport-quic = { path = "crates/cinemotion-transport-quic" }
cinemotion-webrtc = { path = "crates/cinemotion-webrtc" }
