[workspace]
members = [
  "crates/motionstage-protocol",
  "crates/motionstage-core",
  "crates/motionstage-server",
  "crates/motionstage-transport-quic",
  "crates/motionstage-webrtc",
  "crates/motionstage-discovery",
  "crates/motionstage-media",
  "crates/motionstage-recording",
  "crates/motionstage-export-usd",
  "crates/motionstage-export-chan",
  "crates/motionstage-sdk-python",
  "crates/motionstage-cli",
  "crates/motionstage-testkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10"
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
bevy_ecs = "0.17"
bincode = "1.3"
futures = "0.3"
async-trait = "0.1"
indexmap = { version = "2.7", features = ["serde"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.10"
rcgen = "0.13"
mdns-sd = "0.13"
flume = "0.11"
pyo3 = { version = "0.22", features = ["abi3-py310"] }
webrtc = "0.11"
motionstage-protocol = { path = "crates/motionstage-protocol" }
motionstage-core = { path = "crates/motionstage-core" }
motionstage-server = { path = "crates/motionstage-server" }
motionstage-discovery = { path = "crates/motionstage-discovery" }
motionstage-media = { path = "crates/motionstage-media" }
motionstage-recording = { path = "crates/motionstage-recording" }
motionstage-export-usd = { path = "crates/motionstage-export-usd" }
motionstage-export-chan = { path = "crates/motionstage-export-chan" }
motionstage-sdk-python = { path = "crates/motionstage-sdk-python" }
motionstage-testkit = { path = "crates/motionstage-testkit" }
motionstage-transport-quic = { path = "crates/motionstage-transport-quic" }
motionstage-webrtc = { path = "crates/motionstage-webrtc" }
