[build-system]
requires = ["setuptools>=68", "wheel", "maturin>=1.7,<2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motionstage-sdk"
version = "0.1.0"
description = "MotionStage Python SDK"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["motionstage_sdk*", "blender_adapter*"]

[tool.maturin]
manifest-path = "../crates/motionstage-sdk-python/Cargo.toml"
module-name = "motionstage_sdk_rust"
python-source = "."
bindings = "pyo3"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
