[package]
name = "cinemotion-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cinemotion"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cinemotion-server.workspace = true
cinemotion-core.workspace = true
cinemotion-protocol.workspace = true
uuid.workspace = true
