[package]
name = "cinemotion-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
serde.workspace = true
pbjson = "0.7.0"
pbjson-build = "0.7.0"
pbjson-types = "0.7.0"

[build-dependencies]
prost-build.workspace = true
pbjson-build = "0.7.0"
