[package]
name = "cinemotion-recording"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
uuid.workspace = true
cinemotion-core.workspace = true
cinemotion-protocol.workspace = true

[dev-dependencies]
tempfile = "3.14"
