[package]
name = "cinemotion-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
cinemotion-protocol.workspace = true
cinemotion-core.workspace = true
cinemotion-media.workspace = true
cinemotion-recording.workspace = true
cinemotion-discovery.workspace = true
cinemotion-transport-quic.workspace = true
cinemotion-webrtc.workspace = true

[dev-dependencies]
tempfile = "3.14"
