[package]
name = "cinemotion-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
uuid.workspace = true
bytes.workspace = true
tokio.workspace = true
futures.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
cinemotion-protocol.workspace = true
cinemotion-core.workspace = true

[dev-dependencies]
