[package]
name = "motionstage-sdk-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "motionstage_sdk_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true
motionstage-server.workspace = true
motionstage-core.workspace = true
motionstage-protocol.workspace = true
uuid.workspace = true
