[package]
name = "motionstage-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
uuid.workspace = true
bytes.workspace = true
tokio.workspace = true
futures.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
motionstage-protocol.workspace = true
motionstage-core.workspace = true

[dev-dependencies]
