[package]
name = "motionstage"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "motionstage"
path = "src/cli/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
arc-swap.workspace = true
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
derive_more.workspace = true
libmdns.workspace = true
async-trait.workspace = true
futures.workspace = true
warp.workspace = true
serde.workspace = true
webrtc.workspace = true
base64.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
hostname.workspace = true
get_if_addrs.workspace = true
actix = "0.13.5"
actix-web = "4.9.0"
actix-ws = "0.3.0"
typed-builder = "0.20.0"
env_logger = "0.11.6"
actix-telepathy = "0.6.1"
actix-broker = "0.4.3"
log = "0.4.22"
tokio-util = "0.7.13"
bincode = "1.3.3"
zmq = "0.10.0"
async-stream = "0.3.6"
zeromq = "0.4.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
parking_lot = "0.12.3"
lazy_static = "1.5.0"

[dev-dependencies]
paste = "1.0"
pretty_assertions_sorted = "1.2"
tracing-test = "0.2.4"

[build-dependencies]
prost-build = "0.12"
